@@ -244,7 +244,7 @@ def invert(regex):
         for s in invert(r"[A-Z]{3}\d{3}"):
             print s
     """
-    invre = GroupEmitter(parser().parse_string(regex)).make_generator()
+    invre = GroupEmitter(parser().parse_string(regex, parse_all=True)).make_generator()
     return invre()
 
 
